# mathbridge-processor

./: README.md  benchmark_analysis.csv  benchmark_performance.py  benchmark_results.json  performance_analysis.py  pyproject.toml  scaling_analysis.json
scripts/: setup_for_agent.py
src/mathbridge_processor/: __init__.py  cli.py  config.py  data_cleaner.py  processor.py  schemas.py
tests/: test_cleaning.py
