[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mathbridge-processor"
version = "0.1.0"
description = "Process MathBridge dataset with LaTeX validation, speech generation, and cleaning"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
keywords = ["mathematics", "latex", "speech", "accessibility", "nlp"]

dependencies = [
    "datasets>=2.14.0",
    "pandas>=1.5.0",
    "tqdm>=4.64.0",
    "latex-validator>=1.0.0",
    "huggingface-hub>=0.16.0",
    "pyarrow>=12.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
mathbridge-process = "mathbridge_processor.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/mathbridge_processor"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
